welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:0: error: not found: value growFlowers
	    growFlowers();
            ^FlowerPot:3: error: value c is not a member of object java.awt.Color
	marque(Color.c);avance();marque(Color.YELLOW);avance();marque(Color.c);recule();droite();avance();marque(Color.c);recule(2);marque();
                     ^FlowerPot:3: error: value c is not a member of object java.awt.Color
	marque(Color.c);avance();marque(Color.YELLOW);avance();marque(Color.c);recule();droite();avance();marque(Color.c);recule(2);marque();
                                                                            ^FlowerPot:3: error: value c is not a member of object java.awt.Color
	marque(Color.c);avance();marque(Color.YELLOW);avance();marque(Color.c);recule();droite();avance();marque(Color.c);recule(2);marque();
                                                                                                                       ^FlowerPot:3: error: not enough arguments for method marque: (c: java.awt.Color)Unit.
Unspecified value parameter c.
	marque(Color.c);avance();marque(Color.YELLOW);avance();marque(Color.c);recule();droite();avance();marque(Color.c);recule(2);marque();
                                                                                                                                          ^