welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.code
def fleur(c:Color){
	marque(Color.c);avance();marque(Color.YELLOW);avance();marque(Color.c);recule();droite();avance();marque(Color.c);recule(2);marque();
}

def marque(c: Color){setCouleurBrosse(c);baisseBrosse();leveBrosse();}